--- a/package.json
+++ b/package.json
@@ -9,19 +9,27 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/font": "^13.5.6",
+    "@sanity/image-url": "^1.0.2",
+    "@sanity/vision": "^3.18.1",
+    "framer-motion": "^10.16.4",
+    "next": "13.5.6",
+    "next-sanity": "^5.5.8",
+    "next-seo": "^6.1.0",
     "react": "^18",
     "react-dom": "^18",
-    "next": "13.5.6"
+    "sanity": "^3.18.1",
+    "styled-components": "5.2"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10",
+    "eslint": "^8",
+    "eslint-config-next": "13.5.6",
     "postcss": "^8",
     "tailwindcss": "^3",
-    "eslint": "^8",
-    "eslint-config-next": "13.5.6"
+    "typescript": "^5"
   }
 }
