--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@sanity/image-url": "^1.0.2",
     "@sanity/vision": "^3.18.1",
+    "@studio-freight/lenis": "^1.0.27",
     "framer-motion": "^10.16.4",
+    "gsap": "^3.12.2",
     "next": "13.5.6",
     "next-sanity": "^5.5.8",
     "next-seo": "^6.1.0",
