--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "next-seo": "^6.1.0",
     "react": "^18",
     "react-dom": "^18",
+    "server-only": "^0.0.1",
     "styled-components": "5.2",
+    "suspend-react": "^0.1.3",
     "tailwind-scrollbar-hide": "^1.1.7"
   },
   "devDependencies": {
