--- a/package.json
+++ b/package.json
@@ -1,40 +1,53 @@
 {
-  "name": "benchmark-homes",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@sanity/client": "^6.7.1",
-    "@sanity/image-url": "^1.0.2",
-    "@sanity/vision": "^3.18.1",
-    "@studio-freight/lenis": "^1.0.27",
-    "framer-motion": "^10.16.4",
-    "gsap": "^3.12.2",
-    "next": "13.5.6",
-    "next-sanity": "^5.5.8",
-    "next-seo": "^6.1.0",
-    "react": "^18",
-    "react-countup": "^6.5.0",
-    "react-dom": "^18",
-    "server-only": "^0.0.1",
-    "styled-components": "5.2",
-    "suspend-react": "^0.1.3",
-    "tailwind-scrollbar-hide": "^1.1.7"
-  },
-  "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "autoprefixer": "^10",
-    "eslint": "^8",
-    "eslint-config-next": "13.5.6",
-    "postcss": "^8",
-    "tailwindcss": "^3",
-    "typescript": "^5"
-  }
+	"name": "benchmark-homes",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint"
+	},
+	"dependencies": {
+		"@radix-ui/react-accordion": "^1.1.2",
+		"@sanity/client": "^6.7.1",
+		"@sanity/image-url": "^1.0.2",
+		"@sanity/vision": "^3.18.1",
+		"@studio-freight/lenis": "^1.0.27",
+		"@studio-freight/react-lenis": "^0.0.36",
+		"class-variance-authority": "^0.7.0",
+		"clsx": "^2.0.0",
+		"framer-motion": "^10.16.4",
+		"gsap": "^3.12.2",
+		"lucide-react": "^0.292.0",
+		"next": "13.5.6",
+		"next-sanity": "^5.5.8",
+		"next-seo": "^6.1.0",
+		"react": "^18",
+		"react-countup": "^6.5.0",
+		"react-dom": "^18",
+		"react-intersection-observer": "^9.5.3",
+		"react-scroll-trigger": "^0.6.14",
+		"server-only": "^0.0.1",
+		"styled-components": "5.2",
+		"suspend-react": "^0.1.3",
+		"tailwind-merge": "^2.0.0",
+		"tailwind-scrollbar-hide": "^1.1.7",
+		"tailwindcss-animate": "^1.0.7"
+	},
+	"devDependencies": {
+		"@types/node": "^20",
+		"@types/react": "^18",
+		"@types/react-dom": "^18",
+		"autoprefixer": "^10",
+		"eslint": "^8",
+		"eslint-config-next": "13.5.6",
+		"postcss": "^8",
+		"tailwindcss": "^3",
+		"typescript": "^5"
+	},
+	"resolutions": {
+		"**/@types/react": "^18",
+		"**/@types/react-dom": "^18"
+	}
 }
