--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 	},
 	"dependencies": {
 		"@radix-ui/react-accordion": "^1.1.2",
+		"@radix-ui/react-tabs": "^1.0.4",
 		"@sanity/client": "^6.7.1",
 		"@sanity/image-url": "^1.0.2",
 		"@sanity/vision": "^3.18.1",
