--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"@sanity/client": "^6.7.1",
 		"@sanity/image-url": "^1.0.2",
 		"@sanity/vision": "^3.18.1",
+		"@sentry/nextjs": "^7.86.0",
 		"@studio-freight/lenis": "^1.0.27",
 		"@studio-freight/react-lenis": "^0.0.36",
 		"class-variance-authority": "^0.7.0",
