--- a/package.json
+++ b/package.json
@@ -15,12 +15,13 @@
 		"@sanity/image-url": "^1.0.2",
 		"@sanity/vision": "^3.18.1",
 		"@sentry/nextjs": "^7.86.0",
-		"@studio-freight/lenis": "^1.0.27",
+		"@studio-freight/lenis": "^1.0.29",
 		"@studio-freight/react-lenis": "^0.0.36",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.0.0",
 		"framer-motion": "^10.16.4",
 		"gsap": "^3.12.2",
+		"locomotive-scroll": "^5.0.0-beta.11",
 		"lucide-react": "^0.292.0",
 		"next": "13.5.6",
 		"next-sanity": "^5.5.8",
